# lurpicUI

./: .gitignore  .golangci.yaml  AGENTS.md  AUTHORS.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md  go.mod  go.sum
.agents/: lurpiclint.md
Documentation/: README.md  android-debugging.md  android-emulator-pipeline.md  android-release-signing.md  android-release.md  artist-authoring-model.md  facet-runtime-api.md  framework-runtime-principles.md  marks-animation-theme-api.md  marks.md  scale-package.md
animation/: animated_value.go  animated_value_test.go  doc.go  easing.go  easing_test.go  interpolatable.go  timeline.go  timeline_lifecycle.go  timeline_test.go
app/: assets.go  assets_android.go  config.go  crash.go  crash_test.go  doc.go  run.go  run_android.go  run_default.go  run_test.go
assets/: android.go  android_test.go  assets.go  cache.go  cache_test.go  deps.go  devfs.go  devfs_test.go  drawable.go  drawable_test.go  job.go  job_test.go  manager.go  packs.go  packs_test.go  pak.go  pak_test.go  pakfs.go  pakfs_test.go  path_registry_test.go  policy.go  read_gate_smoke_test.go  read_gate_test.go  registry.go  registry_test.go  signals.go  source_test.go  transcode.go  transcode_test.go  upload.go
diagnostics/: diagnostics_test.go  doc.go  frame_stats.go  framelog.go  hit_trace_test.go  hitprobe.go  icon_inspector_test.go  inspector.go  layers.go  (+3 more)
render/vulkan/crates/lurpic_render/: CONVENTIONS.md  Cargo.toml
render/vulkan/crates/lurpic_render/src/: atlas.rs  frame.rs  image_store.rs  lib.rs  raster.rs  tessellation.rs  vulkan.rs
(+1208 files in other folders)
