[package]
name = "lurpic_render"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
lto = "thin"
codegen-units = 1
opt-level = 2

# Android-specific release profile — less aggressive optimizations for
# compatibility across GPU vendors and ICD-less emulators.
[profile.release-android]
inherits = "release"
panic = "unwind"
opt-level = 2
